--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -9,12 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "chart.js": "^4.4.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.555.0",
     "next": "16.0.5",
+    "next-themes": "^0.4.6",
     "react": "19.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "19.2.0",
-    "recharts": "^3.5.1",
+    "react-grid-layout": "^1.4.4",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
@@ -22,6 +25,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-grid-layout": "^1.3.5",
     "eslint": "^9",
     "eslint-config-next": "16.0.5",
     "tailwindcss": "^4",
