--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.0",
     "chart.js": "^4.4.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.555.0",
@@ -18,6 +19,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "19.2.0",
     "react-grid-layout": "^1.4.4",
+    "recharts": "^2.15.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
